--- a/GameFinder/GameFinder.csproj
+++ b/GameFinder/GameFinder.csproj
@@ -14,4 +14,8 @@
       <PackageReference Include="WPF-UI" Version="3.0.5" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Utils\" />
+    </ItemGroup>
+
 </Project>
