--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -13,13 +13,16 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: 7.0.x
+          dotnet-version: 8.0.x
       - name: Restore dependencies
         run: dotnet restore ArcadeMatch.sln
       - name: Publish projects
         run: |
           dotnet publish ArcadeMatch.Client/ArcadeMatch.Client.csproj -c Release -o publish/ArcadeMatch.Client
-          dotnet publish ArcadeMatch.Server/ArcadeMatch.Server.csproj -c Release -o publish/ArcadeMatch.Server
+          dotnet publish ArcadeMatch.Server/ArcadeMatch.Server.csproj -c Release -r win-x64 --self-contained true -o publish/ArcadeMatch.Server/win-x64
+          dotnet publish ArcadeMatch.Server/ArcadeMatch.Server.csproj -c Release -r linux-x64 --self-contained true -o publish/ArcadeMatch.Server/linux-x64
+          dotnet publish ArcadeMatch.Server/ArcadeMatch.Server.csproj -c Release -r linux-arm64 --self-contained true -o publish/ArcadeMatch.Server/linux-arm64
+          dotnet publish ArcadeMatch.Server/ArcadeMatch.Server.csproj -c Release -r linux-arm --self-contained true -o publish/ArcadeMatch.Server/linux-arm
           dotnet publish SteamCookieFetcher/SteamCookieFetcher.csproj -c Release -o publish/SteamCookieFetcher
       - name: Create zip
         run: Compress-Archive -Path publish\* -DestinationPath ArcadeMatch.zip
@@ -34,6 +37,7 @@ jobs:
     runs-on: windows-latest
     permissions:
       contents: write
+      packages: write
     steps:
       - uses: actions/download-artifact@v4
         with:
@@ -44,3 +48,16 @@ jobs:
           tag_name: v1.${{ github.run_number }}
           name: Release v1.${{ github.run_number }}
           files: ArcadeMatch.zip
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push server image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ArcadeMatch.Server/Dockerfile
+          push: true
+          tags: ghcr.io/${{ github.repository }}/server:v1.${{ github.run_number }}
