--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -54,6 +54,8 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Build and push server image
         uses: docker/build-push-action@v5
         with:
