--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -43,13 +43,15 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+      - name: Set lowercase repository
+        run: echo "REPOSITORY=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
       - name: Build and push server image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ArcadeMatch.Server/Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository }}/server:v1.${{ github.run_number }}
+          tags: ghcr.io/${{ env.REPOSITORY }}/server:v1.${{ github.run_number }}
 
   release:
     needs: [build, image]
