--- a/ArcadeMatch.Avalonia/ArcadeMatch.Avalonia.csproj
+++ b/ArcadeMatch.Avalonia/ArcadeMatch.Avalonia.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.2" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.2" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.10" />
     <PackageReference Include="Selenium.WebDriver" Version="4.26.1" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Include="Avalonia.Diagnostics" Version="11.3.2">
@@ -29,5 +31,11 @@
     <Compile Include="..\ArcadeMatch.Client\Objects\MatchedGame.cs" Link="Objects\MatchedGame.cs" />
     <Compile Include="..\ArcadeMatch.Client\Objects\MatchedGameSummary.cs" Link="Objects\MatchedGameSummary.cs" />
     <Compile Include="..\ArcadeMatch.Client\Objects\SteamResponse.cs" Link="Objects\SteamResponse.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
