Updates docs to reflect Avalonia as primary client
Revises documentation to designate the cross-platform Avalonia client as the main user interface, superseding the legacy WPF app. Clarifies build instructions, release platform support, and component descriptions to reflect the shift.

Updates Avalonia client configuration with the production server URL.

--- a/ArcadeMatch.Avalonia/appsettings.json
+++ b/ArcadeMatch.Avalonia/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ServerSettings": {
-    "BaseUrl": "http://127.0.0.1:5170",
+    "BaseUrl": "https://games.essenhofer.at",
     "HubPath": "/matchinghub",
     "SteamMarketDataPath": "/SteamMarketData/"
   }
