Updates GitVersion config and improves release workflow
Switches GitVersion configuration to ContinuousDeployment mode and resets versioning rules, aligning with deployment needs.
Adds missing checkout step with proper token to release job for more reliable artifact handling and versioning.

--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,7 +1,9 @@
-next-version: 1.0.0
-mode: Mainline
+mode: ContinuousDeployment
 branches:
   main:
     regex: ^main$
     tag: ''
-    increment: Minor
+    increment: Patch
+    is-main-branch: true
+ignore:
+  sha: []
