--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -99,6 +99,10 @@ jobs:
       contents: write
       packages: write
     steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/download-artifact@v4
         with:
           name: release-artifacts
