--- a/ArcadeMatch.Client/ArcadeMatch.Client.csproj
+++ b/ArcadeMatch.Client/ArcadeMatch.Client.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
@@ -10,13 +10,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.10" />
-      <PackageReference Include="Selenium.WebDriver" Version="4.26.1" />
-      <PackageReference Include="WPF-UI" Version="3.0.5" />
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.10" />
+        <PackageReference Include="Selenium.WebDriver" Version="4.26.1" />
+        <PackageReference Include="WPF-UI" Version="3.0.5" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Utils\" />
+        <Folder Include="Utils\" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\ArcadeMatch.Core\ArcadeMatch.Core.csproj" />
     </ItemGroup>
 
 </Project>
