--- a/ArcadeMatch.Avalonia/ArcadeMatch.Avalonia.csproj
+++ b/ArcadeMatch.Avalonia/ArcadeMatch.Avalonia.csproj
@@ -8,6 +8,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
