--- a/ArcadeMatch.Core/ArcadeMatch.Core.csproj
+++ b/ArcadeMatch.Core/ArcadeMatch.Core.csproj
@@ -4,7 +4,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>GameFinder</RootNamespace>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
