--- a/ArcadeMatch.Server/ArcadeMatch.Server.csproj
+++ b/ArcadeMatch.Server/ArcadeMatch.Server.csproj
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
         <RootNamespace>GameFinderApi</RootNamespace>
+        <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
